# nfx-datetime

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  TODO.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-linux-clang.yml  build-linux-gcc.yml  build-windows-mingw.yml  build-windows-msvc.yml  codeql.yml  documentation.yml  release.yml
benchmark/: BM_DateTime.cpp  BM_DateTimeOffset.cpp  BM_TimeSpan.cpp  CMakeLists.txt  README.md
cmake/: nfx-datetime-config.cmake.in  nfxDateTimeBuildConfig.cmake  nfxDateTimeDependencies.cmake  nfxDateTimeInstall.cmake  nfxDateTimePackaging.cmake  nfxDateTimeSources.cmake  nfxDateTimeTargets.cmake  nfxDateTimeVersion.rc.in
doc/: CMakeLists.txt
include/nfx/: DateTime.h
include/nfx/datetime/: DateTime.h  DateTimeOffset.h  TimeSpan.h
include/nfx/detail/datetime/: Constants.h  DateTime.inl  DateTimeOffset.inl  TimeSpan.inl
samples/: CMakeLists.txt  Sample_DateTime.cpp
src/: Constants.h  DateTime.cpp  DateTimeOffset.cpp  Internal.h  TimeSpan.cpp
test/: CMakeLists.txt  TESTS_DateTime.cpp  TESTS_DateTimeOffset.cpp  TESTS_TimeSpan.cpp
